--- a/SimpleTunnel/Info.plist
+++ b/SimpleTunnel/Info.plist
@@ -44,6 +44,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 	<key>UIVPNPlugin</key>
 	<array>
 		<string>${PLUGIN_BUNDLE_ID}</string>
